<resources>
    <string name="app_name">Bitcoin Ticker</string>

    <!-- Splash -->
    <string name="splash_text">BT</string>

    <!-- General Strings -->
    <string name="welcome">Welcome</string>
    <string name="hide">Hide</string>
    <string name="connection_error">Connection Error</string>
    <string name="no_internet">No internet connection please try again later</string>
    <string name="retry">Retry</string>
    <string name="cancel">Cancel</string>
    <string name="some_error">Some error occurred, try again later</string>
    <string name="auth_failed">Authentication failed, please try again</string>
    <string name="coins_load_error">Coins could not be loaded, please try again</string>
    <string name="detail_load_error">Coin details could not be loaded, please try again</string>
    <string name="favorite_change_error">Favorite status could not be updated, please try again</string>
    <string name="list_no_result">Sorry, There are no results here!</string>
    <string name="hashtag">#</string>
    <string name="title">Title</string>

    <!-- Home -->
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="account">Account</string>

    <!-- Log In -->
    <string name="log_in">Log In</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="not_have_account">Don\'t have an account?</string>
    <string name="empty_email">Please enter your email address</string>
    <string name="invalid_email">Please enter valid email address</string>
    <string name="empty_password">Please enter your password</string>
    <string name="log_in_to_sign_up">or click for sing up</string>

    <!-- Sign Up -->
    <string name="sign_up">Sign Up</string>
    <string name="register">Register</string>

    <!-- Account -->
    <string name="log_out">Log Out</string>
    <string name="log_out_hint">Are you sure you want to log out?</string>
    <string name="skip">Skip</string>

    <!-- Coin -->
    <string name="coin">COIN</string>
    <string name="price">PRICE</string>
    <string name="hour">24H</string>
    <string name="market_cap">MARKET CAP</string>
    <string name="refresh_interval">Refresh Interval</string>
    <string name="price_change_percentage_24h">Price Change Percentage 24h In</string>
    <string name="description">Description</string>
    <string name="current_price">Current Price</string>
    <string name="hash_algorithm">Hash Algorithm</string>
    <string name="confirm_btn">Confirm</string>
    <string name="detail_up_to_date">Last Updated Date</string>
    <string name="my_coins_fragment">My Coins</string>
</resources>
