...
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:maxLines="1"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="14sp"
            tools:text="Bitcoin" />

        <TextView
            android:id="@+id/symbol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="12sp"
            tools:text="BTC" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/priceContainer"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
...
